fix_overflow in helpcenter

--- a/styles/helpcenter/main.css
+++ b/styles/helpcenter/main.css
@@ -9,12 +9,7 @@ html{
 body{
     font-family: "Montserrat", sans-serif;
     background: linear-gradient(180deg, #EFF2F7 43%, #FFFFFF 43%);
-<<<<<<< Updated upstream
-    height: 120vh;
-    overflow-x: hidden;
-=======
     margin-bottom: 10px;
->>>>>>> Stashed changes
     
     
     
